--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,54 +1,93 @@
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_theme_dark_background">
+    android:background="?android:colorBackground">
 
-    <EditText
-        android:id="@+id/emailEditText"
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/emailTextInputLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:backgroundTint="@color/md_theme_dark_onBackground"
-        android:textColorHint="@color/md_theme_dark_onBackground"
-        android:textColor="@color/md_theme_dark_onBackground" />
+        app:boxBackgroundColor="?android:colorBackground"
+        app:boxStrokeColor="?attr/colorOutline"
+        app:hintTextColor="?attr/colorOnBackground"
+        app:startIconDrawable="@drawable/ic_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:textColor="?attr/colorOnBackground" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordTextInputLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/emailEditText"
         android:layout_margin="16dp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/md_theme_dark_onBackground"
-        android:textColorHint="@color/md_theme_dark_onBackground"
-        android:textColor="@color/md_theme_dark_onBackground" />
+        app:boxBackgroundColor="?android:colorBackground"
+        app:boxStrokeColor="?attr/colorOutline"
+        app:endIconMode="password_toggle"
+        app:hintTextColor="?attr/colorOnBackground"
+        app:startIconDrawable="@drawable/ic_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout">
 
-    <EditText
-        android:id="@+id/confirmPasswordEditText"
-        android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:textColor="?attr/colorOnBackground" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirmPasswordTextInputLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/passwordEditText"
         android:layout_margin="16dp"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:backgroundTint="@color/md_theme_dark_onBackground"
-        android:textColorHint="@color/md_theme_dark_onBackground"
-        android:textColor="@color/md_theme_dark_onBackground" />
+        app:boxBackgroundColor="?android:colorBackground"
+        app:boxStrokeColor="?attr/colorOutline"
+        app:endIconMode="password_toggle"
+        app:hintTextColor="?attr/colorOnBackground"
+        app:startIconDrawable="@drawable/ic_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout">
 
-    <Button
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirmPasswordEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/confirm_password"
+            android:inputType="textPassword"
+            android:textColor="?attr/colorOnBackground" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/createAccountButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/confirmPasswordEditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/md_theme_dark_primary"
-        android:text="Create Account"
-        android:textColor="@color/md_theme_dark_onPrimary" />
+        android:layout_margin="16dp"
+        android:text="@string/create_account"
+        android:textColor="?attr/colorOnPrimary"
+        app:backgroundTint="?attr/colorPrimary"
+        app:cornerRadius="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/confirmPasswordTextInputLayout"
+        app:rippleColor="?attr/colorPrimaryVariant" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
