--- a/app/src/main/res/layout/item_category_layout.xml
+++ b/app/src/main/res/layout/item_category_layout.xml
@@ -4,15 +4,15 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="8dp"
     app:cardBackgroundColor="?attr/colorSecondary"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp" >
+    app:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/colorSurface"
         android:orientation="vertical">
 
         <TextView
@@ -22,7 +22,7 @@
             android:layout_marginVertical="8dp"
             android:layout_marginStart="16dp"
             android:text="@string/placeholder"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="?attr/colorOnSurface"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -30,8 +30,7 @@
             android:id="@+id/category_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:scrollbars="none"></androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
