--- a/app/src/main/res/layout/item_layout_wide.xml
+++ b/app/src/main/res/layout/item_layout_wide.xml
@@ -6,13 +6,14 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginTop="8dp"
-    android:padding="8dp"
-    app:cardElevation="4dp">
+    app:cardBackgroundColor="?attr/colorSurface"
+    app:cardElevation="4dp"
+    app:cardCornerRadius="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/featured_item_image"
@@ -28,11 +29,11 @@
             android:id="@+id/item_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Historical Object"
-            android:textAlignment="center"
-            android:textColor="?attr/colorOnBackground"
-            android:textSize="24sp"
+            android:layout_marginStart="16dp"
+            android:text="@string/historical_object"
+            android:textAlignment="textStart"
+            android:textColor="?attr/colorOnSurface"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/featured_item_image"
