--- a/app/src/main/res/layout/uploading_dialog_layout.xml
+++ b/app/src/main/res/layout/uploading_dialog_layout.xml
@@ -3,30 +3,35 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="?attr/colorSurface">
 
     <TextView
         android:id="@+id/uploadingTitleTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Uploading..."
-        android:textSize="18sp" />
+        android:layout_height="wrap_content"
+        android:text="@string/uploading"
+        android:textSize="18sp"
+        android:textColor="?attr/colorOnSurface"/>
 
     <ProgressBar
         android:id="@+id/uploadingProgressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:indeterminate="false"
-        android:max="100" />
+        android:max="100"
+        android:progressTint="?attr/colorPrimary"
+        android:progressBackgroundTint="?attr/colorSurfaceVariant"/>
 
     <TextView
         android:id="@+id/uploadingPercentageTextView"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="0%"
-        android:textSize="16sp" />
+        android:text="@string/_0"
+        android:textSize="16sp"
+        android:textColor="?attr/colorOnSurface"/>
 
 </LinearLayout>
