--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,65 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    <color name="seed">#008488</color>
-    <color name="md_theme_light_primary">#00696D</color>
+    <color name="seed">#6750A4</color>
+    <color name="md_theme_light_primary">#6750A4</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#6FF6FB</color>
-    <color name="md_theme_light_onPrimaryContainer">#002021</color>
-    <color name="md_theme_light_secondary">#4A6364</color>
+    <color name="md_theme_light_primaryContainer">#EADDFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#21005D</color>
+    <color name="md_theme_light_secondary">#625B71</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#CCE8E9</color>
-    <color name="md_theme_light_onSecondaryContainer">#041F20</color>
-    <color name="md_theme_light_tertiary">#4D5F7C</color>
+    <color name="md_theme_light_secondaryContainer">#E8DEF8</color>
+    <color name="md_theme_light_onSecondaryContainer">#1D192B</color>
+    <color name="md_theme_light_tertiary">#7D5260</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#D5E3FF</color>
-    <color name="md_theme_light_onTertiaryContainer">#071C36</color>
-    <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_tertiaryContainer">#FFD8E4</color>
+    <color name="md_theme_light_onTertiaryContainer">#31111D</color>
+    <color name="md_theme_light_error">#B3261E</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
-    <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FAFDFC</color>
-    <color name="md_theme_light_onBackground">#191C1C</color>
-    <color name="md_theme_light_surface">#FAFDFC</color>
-    <color name="md_theme_light_onSurface">#191C1C</color>
-    <color name="md_theme_light_surfaceVariant">#DAE4E4</color>
-    <color name="md_theme_light_onSurfaceVariant">#3F4949</color>
-    <color name="md_theme_light_outline">#6F7979</color>
-    <color name="md_theme_light_inverseOnSurface">#EFF1F1</color>
-    <color name="md_theme_light_inverseSurface">#2D3131</color>
-    <color name="md_theme_light_inversePrimary">#4CD9DF</color>
+    <color name="md_theme_light_errorContainer">#F9DEDC</color>
+    <color name="md_theme_light_onErrorContainer">#410E0B</color>
+    <color name="md_theme_light_outline">#79747E</color>
+    <color name="md_theme_light_background">#FFFBFE</color>
+    <color name="md_theme_light_onBackground">#1C1B1F</color>
+    <color name="md_theme_light_surface">#FFFBFE</color>
+    <color name="md_theme_light_onSurface">#1C1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E7E0EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#49454F</color>
+    <color name="md_theme_light_inverseSurface">#313033</color>
+    <color name="md_theme_light_inverseOnSurface">#F4EFF4</color>
+    <color name="md_theme_light_inversePrimary">#D0BCFF</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#00696D</color>
-    <color name="md_theme_light_outlineVariant">#BEC8C8</color>
+    <color name="md_theme_light_surfaceTint">#6750A4</color>
+    <color name="md_theme_light_outlineVariant">#CAC4D0</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#4CD9DF</color>
-    <color name="md_theme_dark_onPrimary">#003739</color>
-    <color name="md_theme_dark_primaryContainer">#004F52</color>
-    <color name="md_theme_dark_onPrimaryContainer">#6FF6FB</color>
-    <color name="md_theme_dark_secondary">#B0CCCC</color>
-    <color name="md_theme_dark_onSecondary">#1B3435</color>
-    <color name="md_theme_dark_secondaryContainer">#324B4C</color>
-    <color name="md_theme_dark_onSecondaryContainer">#CCE8E9</color>
-    <color name="md_theme_dark_tertiary">#B5C7E9</color>
-    <color name="md_theme_dark_onTertiary">#1E314C</color>
-    <color name="md_theme_dark_tertiaryContainer">#354763</color>
-    <color name="md_theme_dark_onTertiaryContainer">#D5E3FF</color>
-    <color name="md_theme_dark_error">#FFB4AB</color>
-    <color name="md_theme_dark_errorContainer">#93000A</color>
-    <color name="md_theme_dark_onError">#690005</color>
-    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#191C1C</color>
-    <color name="md_theme_dark_onBackground">#E0E3E2</color>
-    <color name="md_theme_dark_surface">#191C1C</color>
-    <color name="md_theme_dark_onSurface">#E0E3E2</color>
-    <color name="md_theme_dark_surfaceVariant">#3F4949</color>
-    <color name="md_theme_dark_onSurfaceVariant">#BEC8C8</color>
-    <color name="md_theme_dark_outline">#899393</color>
-    <color name="md_theme_dark_inverseOnSurface">#191C1C</color>
-    <color name="md_theme_dark_inverseSurface">#E0E3E2</color>
-    <color name="md_theme_dark_inversePrimary">#00696D</color>
+    <color name="md_theme_dark_primary">#D0BCFF</color>
+    <color name="md_theme_dark_onPrimary">#381E72</color>
+    <color name="md_theme_dark_primaryContainer">#4F378B</color>
+    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
+    <color name="md_theme_dark_secondary">#CCC2DC</color>
+    <color name="md_theme_dark_onSecondary">#332D41</color>
+    <color name="md_theme_dark_secondaryContainer">#4A4458</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E8DEF8</color>
+    <color name="md_theme_dark_tertiary">#EFB8C8</color>
+    <color name="md_theme_dark_onTertiary">#492532</color>
+    <color name="md_theme_dark_tertiaryContainer">#633B48</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD8E4</color>
+    <color name="md_theme_dark_error">#F2B8B5</color>
+    <color name="md_theme_dark_onError">#601410</color>
+    <color name="md_theme_dark_errorContainer">#8C1D18</color>
+    <color name="md_theme_dark_onErrorContainer">#F9DEDC</color>
+    <color name="md_theme_dark_outline">#938F99</color>
+    <color name="md_theme_dark_background">#1C1B1F</color>
+    <color name="md_theme_dark_onBackground">#E6E1E5</color>
+    <color name="md_theme_dark_surface">#1C1B1F</color>
+    <color name="md_theme_dark_onSurface">#E6E1E5</color>
+    <color name="md_theme_dark_surfaceVariant">#49454F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#CAC4D0</color>
+    <color name="md_theme_dark_inverseSurface">#E6E1E5</color>
+    <color name="md_theme_dark_inverseOnSurface">#313033</color>
+    <color name="md_theme_dark_inversePrimary">#6750A4</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#4CD9DF</color>
-    <color name="md_theme_dark_outlineVariant">#3F4949</color>
+    <color name="md_theme_dark_surfaceTint">#D0BCFF</color>
+    <color name="md_theme_dark_outlineVariant">#49454F</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
