--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -21,9 +21,10 @@
 
     <TextView
         android:id="@+id/item_title"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:textAlignment="center"
         android:textColor="?attr/colorOnSurface"
         android:textSize="14sp" />
 
